@@ -1,3 +1,8 @@
+2006-12-15  Per Bothner  <per@bothner.com>
+
+	* XMLFilter.java (closeStartTag): If out is a ContentConsumer, call
+	endStartTag so it happens earlier, with correct line position.
+
 2006-12-14  Per Bothner  <per@bothner.com>
 
 	* XMLParser.java.in: Removed.  Replaced by ...
