@@ -1,3 +1,7 @@
+2006-12-15  Per Bothner  <per@bothner.com>
+
+	* ContentConsumer.java (endStartTag): Make public.
+
 2006-12-14  Per Bothner  <per@bothner.com>
 
 	* KawaXMLReader.java: Update for new XMLParser API.
